--- a/index.css
+++ b/index.css
@@ -28,14 +28,14 @@
     --font-size-medium: 2.8rem;
     --font-size-medium-1: 3.6rem;
     --font-size-large: 5.5rem;
-    --font-size-huge: 7.5rem;
+    --font-size-huge: 6.5rem;
     --font-stack: 'Hk Grotesk', sans-serif;
 
     --line-height-normal: 1.7;
     --line-height-small: 1.2;
 
-    --black: #000;
-    --pink: #ff3258;
+    --black: #504543;
+    --pink: #C03011;
     --white: #f0e9f2;
     --white-1: #e5e5e6da;
 
@@ -64,6 +64,10 @@ html {
     html {
         font-size: 52%;
     }
+}
+
+.profile-pic {
+        width: 25rem;
 }
 
 body {
@@ -149,7 +153,7 @@ h2::after {
     content: '';
     display: block;
     height: 2px;
-    width: 10rem;
+    width: 20rem;
     background: var(--pink);
     margin: var(--gutter-small) 0;
 }
