--- a/index.css
+++ b/index.css
@@ -27,8 +27,8 @@
     --font-size-normal: 2.2rem;
     --font-size-medium: 2.8rem;
     --font-size-medium-1: 3.6rem;
-    --font-size-large: 5.5rem;
-    --font-size-huge: 6.5rem;
+    --font-size-large: 4.5rem;
+    --font-size-huge: 7rem;
     --font-stack: 'Hk Grotesk', sans-serif;
 
     --line-height-normal: 1.7;
@@ -67,7 +67,7 @@ html {
 }
 
 .profile-pic {
-        width: 25rem;
+        width: 200px;
 }
 
 body {
