--- a/index.css
+++ b/index.css
@@ -3,14 +3,14 @@
 /* --------------------------------------- */
 
 @font-face {
-    font-family: 'Hk Grotesk';
+    font-family: 'Courier';
     font-style: normal;
     font-weight: 400;
     src: url('./fonts/HKGrotesk-Regular.woff') format('woff');
 }
 
 @font-face {
-    font-family: 'Jost';
+    font-family: 'Courier';
     font-style: normal;
     font-weight: 400;
     src: url('./fonts/Jost-Regular.ttf') format('woff');
@@ -29,7 +29,7 @@
     --font-size-medium-1: 3.6rem;
     --font-size-large: 4.5rem;
     --font-size-huge: 7rem;
-    --font-stack: 'Hk Grotesk', sans-serif;
+    --font-stack: 'Courier', sans-serif;
 
     --line-height-normal: 1.7;
     --line-height-small: 1.2;
@@ -154,7 +154,7 @@ h2::after {
     content: '';
     display: block;
     height: 2px;
-    width: 50rem;
+    width: 30rem;
     background: var(--pink);
     margin: var(--gutter-small) 0;
 }
@@ -195,7 +195,7 @@ p {
 a {
     color: var(--white);
     font-weight: 400;
-    font-family: 'Jost', sans-serif;
+    font-family: 'Courier', sans-serif;
     transition: all .2s;
     outline: 2px solid transparent;
 }
