--- a/index.css
+++ b/index.css
@@ -2,6 +2,17 @@
 /* ----- Basic Setup ----- */
 /* --------------------------------------- */
 
+@keyframes typing {
+  from { width: 0; }
+}
+
+#typey {
+  overflow: hidden;
+  white-space: nowrap;
+  border-right: 1px solid black;
+  animation: typing 2s steps(40, end);
+}
+
 @font-face {
     font-family: 'Courier';
     font-style: normal;
