--- a/index.css
+++ b/index.css
@@ -13,6 +13,14 @@
   animation: typing 2s steps(40, end);
 }
 
+var typed = new Typed(".typing-text", {
+    strings: ["frontend development", "backend development", "web designing", "android development", "web development"],
+    loop: true,
+    typeSpeed: 50,
+    backSpeed: 25,
+    backDelay: 500,
+});
+
 @font-face {
     font-family: 'Courier';
     font-style: normal;
