--- a/index.css
+++ b/index.css
@@ -45,7 +45,7 @@
     --line-height-normal: 1.7;
     --line-height-small: 1.2;
 
-    --black: #8A8787;
+    --black: #635D5D;
     --pink: #C03011;
     --white: #f0e9f2;
     --white-1: #e5e5e6da;
