--- a/index.css
+++ b/index.css
@@ -80,8 +80,8 @@ html {
 .profile-pic {
         width: 200px;
         float: right;
-  padding-top: 100px;
-  padding-right: 100px;
+  margin-top: 100px;
+  margin-right: 100px;
 }
 
 body {
