--- a/index.css
+++ b/index.css
@@ -14,7 +14,7 @@
 }
 
 p {
-    font-family: var(--font-stack);
+    font-family: 'Courier';
 }
 
 * {
@@ -29,7 +29,7 @@ p {
     --font-size-medium: 2.8rem;
     --font-size-medium-1: 3.6rem;
     --font-size-large: 4.5rem;
-    --font-size-huge: 5.8rem;
+    --font-size-huge: 5rem;
     --font-stack: 'Courier', sans-serif;
 
     --line-height-normal: 1.7;
