--- a/index.css
+++ b/index.css
@@ -177,6 +177,10 @@ h3 {
     h3 {
         font-size: var(--font-size-medium);
     }
+  
+    h3 {
+        font-size: var(--font-size-normal);
+    }
 }
 
 p {
