--- a/index.css
+++ b/index.css
@@ -69,7 +69,7 @@ html {
 
 .profile-pic {
         width: 200px;
-        float: right;
+        margin-left: auto;
 }
 
 body {
@@ -432,7 +432,7 @@ body:not(.user-is-tabbing) a:focus {
 .header__text p {
     margin: 1.5rem 0 3.5rem;
     max-width: var(--container-medium-width);
-    font-family: 'Jost', sans-serif;
+    font-family: 'Courier', sans-serif;
     font-size: var(--font-size-medium);
 }
 
