--- a/index.css
+++ b/index.css
@@ -415,7 +415,7 @@ body:not(.user-is-tabbing) a:focus {
 
 .header {
     background: linear-gradient(rgba(0,0,0, .1), rgba(0,0,0, .4)), 
-        url('./3d.PNG');
+        url('./3.png');
     height: 100vh;
     background-size: cover;
     background-position: center;
