--- a/index.css
+++ b/index.css
@@ -426,6 +426,7 @@ body:not(.user-is-tabbing) a:focus {
     background-position: center;
     background-attachment: fixed;
     font-size: var(--font-size-normal);
+    opacity: 0.3;
 }
 
 .header__text {
