--- a/index.css
+++ b/index.css
@@ -75,6 +75,8 @@ html {
 .profile-pic {
         width: 200px;
         margin-left: auto;
+  margin-top: 50px;
+  margin-right: 50px;
 }
 
 body {
@@ -419,14 +421,13 @@ body:not(.user-is-tabbing) a:focus {
 /* --------------------------------------- */
 
 .header {
-    background: linear-gradient(rgba(0,0,0, .1), rgba(0,0,0, .4)), 
+    background: linear-gradient(rgba(0,0,0, .7), rgba(0,0,0, .8)), 
         url('./3.png');
     height: 100vh;
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
     font-size: var(--font-size-normal);
-    opacity: 0.3;
 }
 
 .header__text {
