--- a/index.css
+++ b/index.css
@@ -10,7 +10,7 @@
   overflow: hidden;
   white-space: nowrap;
   border-right: 1px solid black;
-  animation: typing 2s steps(40, end);
+  animation: typing 2s steps(40), blink-caret 0.75s step-end infinite;
 }
 
 p {
