--- a/index.css
+++ b/index.css
@@ -11,6 +11,7 @@
   white-space: nowrap;
   border-right: 1px solid black;
   animation: typing 2s steps(40), blink-caret 0.75s step-end infinite;
+  margin-bottom: 25px;
 }
 
 @media (max-width: 900px) {
@@ -36,6 +37,10 @@
   margin-top: 100px;
   margin-right: 100px;
 }
+  
+h4 {
+  margin-bottom: 15px;
+  }
   
 p {
     font-family: 'Courier';
