--- a/index.css
+++ b/index.css
@@ -645,10 +645,12 @@ body:not(.user-is-tabbing) a:focus {
 }
 
 .profile-pic {
-  margin-top: 75px;
-  margin-right: 75px;
-  width: 150px;
+  margin-top: 50px;
+  margin-bottom: 75px;
+  width: 175px;
   position: relative;
+  margin-left: auto;
+  margin-right: auto;
   z-index: 1;
 }
 
@@ -670,10 +672,12 @@ body:not(.user-is-tabbing) a:focus {
 }
 
 .profile-pic {
-  margin-top: 50px;
-  margin-right: 50px;
-  width: 100px;
+  margin-top: 30px;
+  margin-bottom: 50px;
+  width: 150px;
   position: relative;
+  margin-left: auto;
+  margin-right: auto;
   z-index: 1;
 }
 
